--- a/style.css
+++ b/style.css
@@ -79,6 +79,10 @@ body {
   text-transform: uppercase;
 }
 
+.sticky-top {
+  overflow: hidden;
+}
+
 .home {
   background-image: url(img/bg-home.png);
   background-size: cover;
@@ -88,7 +92,8 @@ body {
   padding-bottom: 5rem;
 }
 
-.home h2, .info h2 {
+.home h2,
+.info h2 {
   color: var(--pink);
   font-family: "Sacramento";
   font-size: 5rem;
@@ -137,30 +142,58 @@ body {
   color: var(--pink);
 }
 
-.info{
+.info {
   background-color: var(--bg);
   color: white;
   padding-top: 10rem;
   padding-bottom: 8rem;
 }
 
+.info .alamat {
+  font-size: 1.1rem;
+}
 
+.info .description {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.info .card {
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  color: white !important;
+  border: 1px solid #999;
+}
+
+.info .card-header {
+  border-bottom: 1px solid #999;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+
+.info .card-body {
+  font-size: 1rem;
+}
+
+.info .card-footer {
+  border-top: 1px solid #999;
+  font-size: 0.9rem;
+  font-weight: 300;
+}
 /* Media Query */
 /* Extra Large */
-@media (max-width:1200px){
-  .home .heart{
+@media (max-width: 1200px) {
+  .home .heart {
     transform: translateX(-50%) translateY(145px);
   }
 }
-
 
 /* Laptop */
 @media (max-width: 992px) {
   html {
     font-size: 75%;
   }
-  
-  .home .heart{
+
+  .home .heart {
     display: none;
   }
 
